--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,16 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <base href="/">
-        <link rel="icon" href="/static/logo.svg">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>{% block title %}WatchJellyTogether - Sync watch states between Jellyfin users{% endblock %}</title>
+        <base href="{{ path('dashboard') }}">
+        <link rel="icon" href="/static/images/logo.svg">
         {% block stylesheets %}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+            <link href="/static/css/app.css" rel="stylesheet">
         {% endblock %}
 
         {% block javascripts %}
-        {% endblock %}
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>        {% endblock %}
     </head>
     <body>
+        {% include 'partial/navbar.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
