Add interface for making connections

--- a/templates/partial/navbar.html.twig
+++ b/templates/partial/navbar.html.twig
@@ -7,13 +7,13 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ 'generic.toggle_navigation'|trans }}">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse ps-lg-3" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    {% for page in ['dashboard'] %}
-                        <a class="nav-link{% if app.current_route == page %} active" aria-current="page{% endif %}" href="{{ path(page) }}">{{ ('menu.' ~ page)|trans }}</a>
-                    {% endfor %}
-                </li>
+                {% for page in ['dashboard', 'user_connection_list'] %}
+                    <li class="nav-item">
+                        <a class="nav-link{% if app.current_route == page or (page != 'dashboard' and app.request.requestUri starts with path(page)) %} active" aria-current="page{% endif %}" href="{{ path(page) }}">{{ ('menu.' ~ page)|trans }}</a>
+                    </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
