--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -5,17 +5,34 @@
     --bs-body-color: #FFFFFF;
     --bs-body-font-family: 'Open Sans', sans-serif;
     --bs-primary: #7C34C8;
+    --bs-primary-hover: #6f21ba;
     --bs-secondary: #A380C8;
+    --bs-secondary-hover: #9263c5;
 }
 
+img {
+    max-width: 100%;
+}
+
+a {
+    color: var(--bs-primary);
+    text-decoration: none;
+
+    &:hover {
+        color: var(--bs-primary-hover);
+    }
+}
+
+.navbar-nav {
+    --bs-nav-link-color: var(--bs-body-color);
+    --bs-nav-link-hover-color: var(--bs-secondary);
+}
 .navbar {
     --bs-navbar-brand-color: #fff;
     --bs-navbar-brand-hover-color: var(--bs-secondary);
     --bs-navbar-toggler-border-color: transparent;
     --bs-navbar-toggler-focus-width: 0;
     --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-    --bs-nav-link-color: var(--bs-body-color);
-    --bs-nav-link-hover-color: var(--bs-secondary);
 
     background-color: #0A111E;
 
@@ -30,4 +47,32 @@
     .nav-link.active {
         color: var(--bs-secondary);
     }
+}
+
+.table {
+    --bs-table-color: var(--bs-body-color);
+    --bs-table-striped-color: var(--bs-table-color);
+    --bs-table-striped-bg: rgba(255, 255, 255, 0.05);
+
+    th, td {
+        vertical-align: middle;
+    }
+
+    tfoot tr > * {
+        border-bottom: 0;
+    }
+}
+
+.btn-primary {
+    --bs-btn-bg: var(--bs-primary);
+    --bs-btn-border-color: var(--bs-primary);
+    --bs-btn-hover-bg: var(--bs-primary-hover);
+    --bs-btn-hover-border-color: var(--bs-primary-hover);
+}
+
+.btn-secondary {
+    --bs-btn-bg: var(--bs-secondary);
+    --bs-btn-border-color: var(--bs-secondary);
+    --bs-btn-hover-bg: var(--bs-secondary-hover);
+    --bs-btn-hover-border-color: var(--bs-secondary-hover);
 }
