--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,16 +7,25 @@
         <base href="{{ path('dashboard') }}">
         <link rel="icon" href="/static/images/logo.svg">
         {% block stylesheets %}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@7.2.0/css/fontawesome.min.css" integrity="sha256-sWSi0pBXSOHUhRLx6YVga0KCyUOLvA7ilY5W9lhpXSs=" crossorigin="anonymous">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
             <link href="/static/css/app.css" rel="stylesheet">
         {% endblock %}
 
         {% block javascripts %}
+            <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@7.2.0/js/all.min.js" integrity="sha256-KIvD/OMxkCLYz1tU9IH4cPio8Qidomavw3W3ZGwNrpQ=" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>        {% endblock %}
     </head>
     <body>
         {% include 'partial/navbar.html.twig' %}
-        {% block body %}{% endblock %}
+        <div class="container mt-5">
+            {% include 'partial/alerts.html.twig' %}
+
+            <h1>{% block header %}{% endblock %}</h1>
+            <p>{% block leader_text %}{% endblock %}</p>
+
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
